adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
    <h1>Olá, Mundo</h1> 
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi repellendus expedita possimus, dolores iste ipsam facilis ex fugiat amet ullam illum quibusdam accusantium provident optio, architecto voluptas animi sed quod?</p>
    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque, voluptates esse possimus voluptate tempora quibusdam voluptatibus omnis. Beatae perspiciatis incidunt voluptatum error repellat sed, praesentium tenetur esse in dolores. Quis.</p>
 </body>
 </html>
